<resources>
    <string name="app_name">Harmonize</string>
    <string name="login_text">Login</string>
    <string name="user_email_text">username/email address</string>
    <string name="password_text">password</string>
    <string name="password_reset_prompt">Reset Your Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="pass_reset_text">Send Reset Link</string>
    <string name="acc_create_text">Create Account</string>
    <string name="drawer_source_title">Sources</string>
    <string name="edit_source_label">Edit</string>
    <string name="connect_banner_label">Connect</string>
    <string name="playlist_label">Playlists</string>
    <string name="generate_playlist_label">Generate New Playlist</string>
    <string name="choose_source_label">Source</string>
    <string name="spotify_platform_banner">Spotify</string>
    <string name="apple_platform_banner">Apple Music</string>
    <string name="soundcloud_platform_banner">Soundcloud</string>
    <string name="pandora_platform_banner">Pandora</string>
    <string name="circle_bullet">•</string>
    <string name="playlist_options_label">Options</string>
    <string name="export_label">Export</string>
    <string name="playlist_image_alt_text">Playlist Image</string>
    <string name="tune_parameters_banner">Tune Search Parameters</string>
    <string name="generate_button_label">Generate</string>
    <string name="artist_similarity_label">Artist Similarity</string>
    <string name="energy_parameter_label">Energy</string>
    <string name="danceability_parameter_label">Danceability</string>
    <string name="speechiness_parameter_label">Speechiness</string>
    <string name="loudness_parameter_label">Loudness</string>
    <string name="acousticness_parameter_label">Acousticness</string>
    <string name="instrumentalness_parameter_label">Instrumentalness</string>
    <string name="liveness_parameter_label">Liveness</string>
    <string name="tempo_parameter_label">Tempo</string>
    <string name="time_signature_parameter_label">Time Signature</string>
    <string name="valence_parameter_label">Valence</string>
    <string name="artist_similarity_parameter_description">What proportion of the results should be only from the artists currently in the source</string>
    <string name="energy_parameter_description">A perceptual measure of intensity and activity</string>
    <string name="danceability_parameter_description">How suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity</string>
    <string name="speechiness_parameter_description">The presence of spoken words in a track</string>
    <string name="loudness_parameter_description">The overall loudness of a track in decibels (dB) Values typically range between -60 and 0 dB.</string>
    <string name="valence_parameter_description">A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive, while tracks with low valence sound more negative .</string>
    <string name="choose_playlist_banner">Choose Playlist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Harmonize</string>
    <string name="nav_header_desc">Header description</string>
    <string name="nav_header_subtitle">subtitle</string>
    <string name="nav_item_home_label">Home</string>
    <string name="nav_item_generate_label">Generate New Playlist</string>
    <string name="nav_item_connect_label">Connect Platforms</string>
    <string name="action_settings">Settings</string>
    <string name="characteristics_string">Characteristics</string>
    <string name="spotify_logout">Logout from Spotify</string>
    <string name="notification_channel_name">notifications</string>
    <string name="notification_channel_description">all notifications</string>
</resources>


