<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_generate"
            android:title="@string/nav_item_generate_label"/>
        <item
                android:id="@+id/nav_connect"
                android:title="@string/nav_item_connect_label"/>
    </group>

    <item android:title="@string/drawer_source_title">
        <menu>
            <item
                    android:id="@+id/nav_edit"
                    android:title="@string/edit_source_label"/>
            <item
                    android:id="@+id/nav_add"
                    android:title="@string/connect_banner_label"/>
        </menu>
    </item>
</menu>