<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LaunchActivity"
        android:layout_weight="-1"
        android:orientation="vertical">
    <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:srcCompat="@mipmap/harmonize_launcher_foreground"
            android:id="@+id/imageView"/>
    <EditText
            android:text="@string/user_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:id="@+id/username_text_field"/>
    <EditText
            android:text="@string/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:id="@+id/password_text_field"/>
    <Button
            android:text="@string/forgot_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="none"
            android:id="@+id/forgot_pass_button"/>
    <Button
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:id="@+id/login_button"/>
    />
</LinearLayout>