<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/playlist_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="32dp"
                android:id="@+id/playlist_label"/>
        <View
                android:id="@+id/divider_top"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"

        />
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"/>

        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="64dp"/>


        <TextView
                android:text="@string/drawer_source_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="32dp"
                android:id="@+id/source_title"/>
        <View
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
        />
        <TextView
                android:text="@string/edit_source_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_sources_text"/>
        <TextView
                android:text="@string/connect_banner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_sources_text"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>