<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PassResetActivity"
        android:layout_weight="-1"
        android:orientation="vertical">
    <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:srcCompat="@mipmap/harmonize_launcher_foreground"
            android:id="@+id/imageView"/>
    <TextView
            android:text="@string/password_reset_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="36dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/pass_reset_prompt"/>
    <EditText
            android:hint="@string/user_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textCursorDrawable ="@null"
            android:id="@+id/username_text_field"/>
    <Button
            android:text="@string/pass_reset_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:padding="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:id="@+id/reset_button"/>
    />
</LinearLayout>