<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tune_parameters_banner"
            android:text="@string/tune_parameters_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_alignParentBottom="true"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parameters_scrollview"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
        <LinearLayout
                android:id="@+id/parameters_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            <LinearLayout
                    android:id="@+id/artist_similarity_linearlayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center">
                <LinearLayout
                        android:id="@+id/artist_similarity_banner_linearlayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/artist_similarity_label"
                            android:text="@string/artist_similarity_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingStart="5dp"
                            android:textSize="24sp"/>
                    <ImageView
                            android:id="@+id/artist_similarity_info_button"
                            android:src="@drawable/ic_info_icon"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitXY"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"/>
                </LinearLayout>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/artist_similarity_seekbar"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>
                <TextView
                        android:id="@+id/artist_similarity_seekbar_value"
                        tools:hint="#"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/energy_parameter_linearlayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                <LinearLayout
                        android:id="@+id/energy_parameter_banner_linearlayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/energy_parameter_label"
                            android:text="@string/energy_parameter_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingStart="5dp"
                            android:textSize="24sp"/>
                    <ImageView
                            android:id="@+id/energy_parameter_info_button"
                            android:src="@drawable/ic_info_icon"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitXY"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"/>
                </LinearLayout>
                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/energy_parameter_seekbar"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>
                <TextView
                        android:id="@+id/energy_parameter_seekbar_value"
                        tools:hint="#"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/danceability_parameter_linearlayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                <LinearLayout
                        android:id="@+id/danceability_parameter_banner_linearlayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/danceability_parameter_label"
                            android:text="@string/danceability_parameter_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingStart="5dp"
                            android:textSize="24sp"/>
                    <ImageView
                            android:id="@+id/danceability_parameter_info_button"
                            android:src="@drawable/ic_info_icon"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitXY"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"/>
                </LinearLayout>
                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/danceability_parameter_seekbar"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>
                <TextView
                        android:id="@+id/danceability_parameter_seekbar_value"
                        tools:hint="#"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/speechiness_parameter_linearlayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                <LinearLayout
                        android:id="@+id/speechiness_parameter_banner_linearlayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/speechiness_parameter_label"
                            android:text="@string/speechiness_parameter_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingStart="5dp"
                            android:textSize="24sp"/>
                    <ImageView
                            android:id="@+id/speechiness_parameter_info_button"
                            android:src="@drawable/ic_info_icon"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitXY"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"/>
                </LinearLayout>
                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/speechiness_parameter_seekbar"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>
                <TextView
                        android:id="@+id/speechiness_parameter_seekbar_value"
                        tools:hint="#"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/loudness_parameter_linearlayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                <LinearLayout
                        android:id="@+id/loudness_parameter_banner_linearlayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/loudness_parameter_label"
                            android:text="@string/loudness_parameter_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingStart="5dp"
                            android:textSize="24sp"/>
                    <ImageView
                            android:id="@+id/loudness_parameter_info_button"
                            android:src="@drawable/ic_info_icon"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitXY"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"/>
                </LinearLayout>
                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/loudness_parameter_seekbar"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>
                <TextView
                        android:id="@+id/loudness_parameter_seekbar_value"
                        tools:hint="#"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/valence_parameter_linearlayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center">

                <LinearLayout
                        android:id="@+id/valence_parameter_banner_linearlayout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                    <TextView
                            android:id="@+id/valence_parameter_label"
                            android:text="@string/valence_parameter_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingStart="5dp"
                            android:textSize="24sp"/>
                    <ImageView
                            android:id="@+id/valence_parameter_info_button"
                            android:src="@drawable/ic_info_icon"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitXY"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"/>
                </LinearLayout>
                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/valence_parameter_seekbar"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>
                <TextView
                        android:id="@+id/valence_parameter_seekbar_value"
                        tools:hint="#"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            </LinearLayout>
            <Button
                    android:text="@string/generate_button_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/generate_playlist_button"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
